--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^1.2.0
   shared_preferences: ^2.2.2
   camera: ^0.10.5+9
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
