--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   intl: ^0.19.0
   image: ^4.1.7
   shimmer: ^3.0.0
+  get: ^4.6.6
+  syncfusion_flutter_datepicker: ^24.2.6
 
 
 dev_dependencies:
