--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,13 @@ dependencies:
   get: ^4.6.6
   syncfusion_flutter_datepicker: ^24.2.6
   image_picker: ^1.0.7
+  double_back_to_close_app: ^2.1.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -73,7 +75,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+  #   - images/a_dot_ham.
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo_black.jpg"
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
