--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^24.2.6
   image_picker: ^1.0.7
   double_back_to_close_app: ^2.1.0
+  package_info_plus: ^5.0.1
 
 
 dev_dependencies:
